--- a/css/styles.css
+++ b/css/styles.css
@@ -1,41 +1,47 @@
+body {font-family: sans-serif}
+h1,h2 {font-weight:100;}
 
 /* Gif control */
-.bake-on-gif {
-	position:relative;
+.container {
+  position:relative;
   display: block;
   width: 100%;
   margin: 0 auto;
   max-width: 640px;
 }
 .btn-anim {
-	position: absolute;
-	width: 36px;
-	height: 36px;
-	bottom: 12px;
-	right: 12px;
-	cursor: pointer;
-	padding: 0;
-	border: 0 solid #fff;
-	border-radius: 50%;
-	background-color: transparent;
+  position: absolute;
+  width: 36px;
+  height: 36px;
+  bottom: 12px;
+  right: 12px;
 
-	/* for IE10 - no transparent background */
-	background-color: #fff;
+  cursor: pointer;
+  padding: 0;
+  border: 0 solid #fff;
+  border-radius: 100%;
+
+  /* IE10 - transparent background not allowed */
+  background-color: rgba(255,255,255,.1);
 }
 .btn-anim:focus {
-	outline: 0 solid;
+  outline: 0 solid;
 }
+
 .svg-pausePlay {
-	pointer-events: none;
-	width: 36px;
-	height: 36px;
-	border-radius: 100%;
-	-webkit-transition:all .3s ease-out;
-	transition: all .3s ease-out;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  overflow: hidden;
+  color: blue;
+  background-color: #fff;
+  fill: currentColor;
+  -webkit-transition: all .3s ease-out;
+  transition: all .3s ease-out;
 }
 .btn-anim:hover .svg-pausePlay,
 .btn-anim:focus .svg-pausePlay {
-  background-color: #fff;
-	border: 0 solid #fff;
-	box-shadow: 0 0 4px rgba(0, 83, 159, 1);
+  color: red;
+  box-shadow: 0 0 6px red;
 }
